<resources>
    <string name="app_name">Plantify</string>
    <string name="user">Nicole</string>
    <string name="home">Home</string>
    <string name="toDo">To Do</string>
    <string name="about">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="greeting">Hello Nicole!</string>
    <string name="intro">Here are your plants:</string>
    <string name="add">Add</string>
    <string name="save">SAVE</string>
    <string-array name="options">
        <item>Monstera</item>
        <item>Philodendron</item>
        <item>Alocasia</item>
        <item>Yucca</item>
        <item>Snake Plant</item>
    </string-array>
    <string name="defaultDate">DD/MM/YYYY</string>
    <string name="defaultName">Name</string>
    <string name="defaultSpecies">Select species</string>
    <string name="takeCare">Take care of your plants!</string>
    <string name="nextWater">See which plants need to be watered next.</string>
    <string name="today">Today</string>
    <string name="later">Later</string>
    <string name="username">Username</string>
    <string name="resetdata">Reset data</string>
    <string name="deleteplants">DELETE PLANTS</string>
    <string name="species">Species</string>
    <string name="purchasedon">Purchased on</string>
    <string name="wateredon">Last watered on</string>
    <string name="plantdesc">Plant Icon</string>
    <string name="addbtn">Add Button</string>
    <string name="edit">EDIT</string>
    <string name="settings">Settings</string>
    <string name="addPlant">Add a plant!</string>
    <string name="editPlant">Edit a plant!</string>
    <string name="lastwatered">Last watered:</string>
    <string name="waternext">Water next:</string>
    <string name="wateredbutton">Watered Button</string>
</resources>
